--- a/3DCanvasApp/3DCanvasApp.csproj
+++ b/3DCanvasApp/3DCanvasApp.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\From3DTo2DPointConversion.cs" />
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
