Added Slot/Poly and refactored ParseLib

--- a/3DCanvasApp/App.config
+++ b/3DCanvasApp/App.config
@@ -10,8 +10,11 @@
     </startup>
     <userSettings>
         <CanvasTest.Properties.Settings>
-            <setting name="IsoProgramsPath" serializeAs="String">
+            <setting name="CncProgramsPath" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="ExtensionFile" serializeAs="String">
+                <value>*.mpf</value>
             </setting>
         </CanvasTest.Properties.Settings>
     </userSettings>
