--- a/3DCanvasApp/3DCanvasApp.csproj
+++ b/3DCanvasApp/3DCanvasApp.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D88A0F59-6D07-484C-80A7-D60EA1F8DDBE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CanvasTest</RootNamespace>
-    <AssemblyName>CanvasTest</AssemblyName>
+    <RootNamespace>Canvas3DViewer</RootNamespace>
+    <AssemblyName>Canvas3DViewer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
