--- a/ParserLib/ParserLib.csproj
+++ b/ParserLib/ParserLib.csproj
@@ -44,10 +44,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Helpers\GeoHelper.cs" />
-    <Compile Include="Entities\Helpers\TechnoHelper.cs" />
+    <Compile Include="Entities\Parsers\ParseMpf.cs" />
+    <Compile Include="Helpers\GeoHelper.cs" />
+    <Compile Include="Helpers\TechnoHelper.cs" />
+    <Compile Include="Interfaces\IBaseEntity.cs" />
+    <Compile Include="Interfaces\IPoly.cs" />
     <Compile Include="Interfaces\IProgramContext.cs" />
+    <Compile Include="Interfaces\ISlot.cs" />
+    <Compile Include="Models\PolyMoves.cs" />
     <Compile Include="Models\ProgramContext.cs" />
+    <Compile Include="Models\SlotMove.cs" />
     <Compile Include="Models\ViewModelBase.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Interfaces\IArc.cs" />
@@ -57,7 +63,7 @@
     <Compile Include="Models\ArcMove.cs" />
     <Compile Include="Models\LinearMove.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\Interfaces\IParser.cs" />
+    <Compile Include="Interfaces\IParser.cs" />
     <Compile Include="Entities\Parsers\ParseIso.cs" />
   </ItemGroup>
   <ItemGroup />
