--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,6 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 3DCanvasApp/upgrade-assistant.clef
+ParserLib/ParserLib - Backup (1).csproj
+ParserLib/ParserLib - Backup.csproj
+ParserLib/UpgradeReport.sarif
