added the Hole interface and class, added the LeadIn management, mathHelper expanded
Hole macro is now on a interface of its own , has a property Circle that implements the previous ArcMove logic.

All the Macros have a new LinearMove LeadIn, calculated inside the GeoHelper methods.
Macros last point is coherent with the lead in

--- a/ParserLib/ParserLib.csproj
+++ b/ParserLib/ParserLib.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Globals\Globals.cs" />
+    <Compile Remove="Interfaces\Interface1.cs" />
   </ItemGroup>
 </Project>
